2006-10-25  Marc Singer  <elf@zealous.synapse.com>

	* src/drivers/drv-nand.c (cmd_nand): NAND commands moved to a
	configurable option. 
	(nand_report): Fixed the display of the NAND status.

2006-10-23  Marc Singer  <elf@cerise.buici.com>

	* src/drivers/drv-fis.c (prescan_directory): Modified the check
	for swapped partitions to compare the address of the directory
	partition with the address being scanned.  Should be more robust
	than the original test.  Also added a further limit to directory
	scanning using the length of the directory partition.

2006-10-23  Marc Singer  <elf@zealous.synapse.com>

	* src/arch-arm/entry/mmu-alloc.c (alloc_uncached_top_retain):
	Function returns a block of memory from the top of scanned RAM.
	It also removes the memory from the pool passed to the kernel.

	* src/drivers-lh/drv-clcdc.c (clcdc_init): New configuration
	option to allocate the frame buffer from the top of memory and
	remove it from the pool given the kernel.  It also prevents the
	LCD display from being shut down when the loader passes control to
	the boot or go application.

2006-10-18  Marc Singer  <elf@zealous.synapse.com>

	* Makefile: v1.4.7

	* src/mach-lh7a40x/preinitialization-companion.c:
	Preinitialization support to work-around limitation in Sharp Boot
	ROM.  The ROM only loads 512 bytes from modern NAND parts.  We
	need to pull more of this down in order to properly initialize the
	system and copy the loader to SDRAM.

	* src/drivers/drv-nand.c: Genericized NAND driver.

	* src/drivers-lh/drv-clcdc.c: New panels.  Reorganized the panel
	setup code to better conform to standard nomenclature.

	* src/drivers/drv-dm9000.c: Support for more than one DM9000
	chip.  It can write to both mac address roms as well.
	
2006-08-18    <elf@scarlet.buici.com>

	* src/drivers/drv-fis.c (compare_skips): Fixed the comparison
	function.  The sign sense was wrong and it sorted to the wrong
	order.

2006-08-12    <elf@scarlet.buici.com>

	* Makefile (SUBLEVEL): v1.4.3
